<resources>
    <string name="app_name">Eden</string>
    <string name="sign_in_fragment">Sign In Fragment</string>
    <string name="orders_fragment">Orders Fragment</string>
    <string name="item_details_fragment">Item Details Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="basket_fragment">Basket Fragment</string>
    <string name="sign_in_activity">Sign In Activity</string>
    <string name="details_activity">Details Activity</string>
    <string name="home_drawer_label">Home</string>
    <string name="basket_drawer_label">Basket</string>
    <string name="orders_drawer_label">Orders</string>
    <string name="user_profile_picture_content_desc">User Profile Picture</string>
    <string name="user_name_placeholder_text">Naomi Molemi</string>
    <string name="user_email_placeholder_text">naomimolemi@kfreshproduce.com</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="item_image">Fruit or Veg Image</string>
    <string name="item_price">Fruit or Veg Price</string>
    <string name="item_name">Fruit or Veg Name</string>
    <string name="decrease_item_quantity_text">-</string>
    <string name="increase_item_text">+</string>
    <string name="add_to_basket_text">Add to Basket</string>
    <string name="sign_in">Sign In</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call</string>
    <string name="email_us">Email</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="basket_empty">Your basket is empty</string>
    <string name="total">Basket Total</string>
    <string name="checkout">Checkout</string>
    <string name="no_orders">You have no orders</string>
    <string name="basket_item_image">Basket Item Image</string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="login_text">Sign in for seamless checkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_us_text">Send Us An Email</string>
    <string name="email_subject_text">Subject</string>
    <string name="email_body">Email Body</string>
    <string name="sign_out">Sign Out</string>
    <string name="our_combos">Our Combos</string>
    <string name="our_produce">Our Produce</string>
</resources>