<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/home_drawer_label"
            />

        <item
            android:id="@+id/basketFragment"
            android:icon="@drawable/ic_round_shopping_basket_24"
            android:title="@string/basket_drawer_label" />

        <item
            android:id="@+id/ordersFragment"
            android:icon="@drawable/ic_order_filled"
            android:title="@string/orders_drawer_label" />

        <item
            android:id="@+id/signInFragment"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/sign_in" />

    </group>

    <item android:title="@string/contact_us">
        <menu>
            <item
                android:id="@+id/contactUsFragment"
                android:icon="@drawable/ic_round_call_24"
                android:title="@string/call_us" />
            <item
                android:id="@+id/email_us"
                android:icon="@drawable/ic_round_email_24"
                android:visible="false"
                android:title="@string/email_us" />
            <item
                android:id="@+id/visit_us"
                android:icon="@drawable/ic_round_location_on_24"
                android:visible="false"
                android:title="@string/visit_us" />
        </menu>
    </item>
</menu>