<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AuthFragment">

    <ImageView
        android:id="@+id/app_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/mix"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.9"
            android:padding="24dp"
            app:cardCornerRadius="0dp"
            android:clickable="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:id="@+id/sign_in_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    android:textColor="@color/primaryColor"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sign_in_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/login_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in_app_name" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:padding="12dp"
                    android:text="@string/sign_in_with_email"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    app:iconPadding="24dp"
                    app:icon="@drawable/ic_round_email_24"
                    app:layout_constraintEnd_toEndOf="@+id/google_sign_in_button"
                    app:layout_constraintStart_toStartOf="@+id/google_sign_in_button"
                    app:layout_constraintTop_toBottomOf="@+id/sign_in_login" />

                <Button
                    android:id="@+id/google_sign_in_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:padding="12dp"
                    android:text="@string/sign_in_with_google"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    app:icon="@drawable/google_vector_icon"
                    app:iconTint="@null"
                    app:iconPadding="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
</FrameLayout>