<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="0dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/basket_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16.5sp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="Item Name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/basket_item_image"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:padding="8dp"
            android:contentDescription="@string/basket_item_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/basket_item_details_root"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basket_item_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/basket_item_details_root"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/basket_item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/basket_item_image"
            >

            <TextView
                android:id="@+id/basket_item_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="15sp"
                android:text="Price"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/basket_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="15sp"
                tools:text="P12.90"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/basket_item_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="15sp"
                android:text="Quantity"
                app:layout_constraintTop_toBottomOf="@id/basket_item_price_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/decrease_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/round_button"
                android:text="@string/decrease_item_quantity_text"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/primaryColor"
                app:layout_constraintTop_toTopOf="@+id/basket_item_quantity"
                app:layout_constraintBottom_toBottomOf="@+id/basket_item_quantity"
                app:layout_constraintEnd_toStartOf="@+id/basket_item_quantity"
                />

            <TextView
                android:id="@+id/basket_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="15sp"
                tools:text="1"
                app:layout_constraintTop_toBottomOf="@id/basket_item_price"
                app:layout_constraintEnd_toStartOf="@id/increase_item_quantity"/>

            <TextView
                android:id="@+id/increase_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/round_button"
                android:text="@string/increase_item_text"
                android:textColor="@color/primaryColor"
                android:onClick="onBasketDecreaseQuantity"
                app:layout_constraintTop_toTopOf="@+id/basket_item_quantity"
                app:layout_constraintBottom_toBottomOf="@+id/basket_item_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/basket_item_total_price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="15sp"
                android:text="Total"
                app:layout_constraintTop_toBottomOf="@id/basket_item_quantity_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/basket_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="15sp"
                tools:text="P12.90"
                app:layout_constraintTop_toBottomOf="@id/basket_item_quantity"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>